# rob320-proj2v4

./: CMakeLists.txt  README.md
include/lidar/: lidar.hpp  lidar_base.hpp
include/lidar_driver/: lidar_driver.hpp
include/mbot/: mbot.hpp  mbot_base.hpp  messages.hpp
include/mbot_driver/: mbot_driver.hpp
include/rix/ipc/: server_tcp.hpp  socket.hpp
include/rix/ipc/interfaces/: client.hpp  connection.hpp  server.hpp
python/: click_to_drive.py  requirements.txt
python/rixmsg/: message.py
src/lidar/: lidar.cpp
src/lidar_driver/: lidar_driver.cpp  main.cpp
src/mbot/: mbot.cpp
src/mbot_driver/: main.cpp  mbot_driver.cpp
src/rix/ipc/: client_tcp.cpp  connection_tcp.cpp  endpoint.cpp  server_tcp.cpp  socket.cpp
tests/: lidar_driver.cpp  mbot_driver.cpp  socket.cpp  tcp.cpp
tests/mocks/: mock_client.hpp  mock_connection.hpp  mock_server.hpp
